--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,64 @@
 
 
-<mat-form-field appearance="standard">
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-</mat-form-field>
+<div class="container">
 
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
-
-    <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-      <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-    </ng-container>
-
-    <!-- Progress Column -->
-   
-    <!-- Name Column -->
-    <ng-container matColumnDef="ProjectName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
-      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-    </ng-container>
-
-    <!-- Fruit Column -->
-    <ng-container matColumnDef="ProjectPath">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Path </th>
-      <td mat-cell *matCellDef="let row"> {{row.project_path}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
-  </table>
-
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-</div>
-
-<router-outlet></router-outlet>
+  <mat-form-field appearance="standard">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
+  
+  <div class="mat-elevation-z8" >
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+    
+     
+      <!-- Name Column -->
+      <ng-container matColumnDef="ProjectName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      </ng-container>
+      <ng-container matColumnDef="Description">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+        <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+      </ng-container>
+  
+      <!-- Fruit Column -->
+      <ng-container matColumnDef="ProjectPath">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Path </th>
+        <td mat-cell *matCellDef="let row"> {{row.project_path}} </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="Action" >
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+        <td mat-cell *matCellDef="let row; let i = index;" class="action">
+        
+          <button mat-icon-button color="primary">
+            <mat-icon>edit</mat-icon>
+          </button>
+          
+          <button mat-icon-button color="warn" >
+            <mat-icon>delete</mat-icon>
+          </button>
+          
+          <button mat-icon-button class="tt"  (click)="startProject(row.project_path,row._id,i)" >
+            <mat-icon>arrow_right_alt</mat-icon>
+          </button>
+         
+  
+        </td>
+      </ng-container>
+  
+      
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
+  </div>
